# AIE9

./: .gitignore  AI_ENGINEERING_INTERVIEW_PREP.md  PROMPTS.md
00_AIE_Quicklinks/: README.md
01_Vibe_Check/: README.md  STUDY_GUIDE.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb  STUDY_GUIDE.md
03_The_Agent_Loop/: STUDY_GUIDE.md  The_Agent_Loop_Assignment.ipynb
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  STUDY_GUIDE.md
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb  STUDY_GUIDE.md  file_manager_agent.py
06_Agent_Memory/: Agent_Memory_Assignment.ipynb  STUDY_GUIDE.md  activity_1.py  activity_2.py
07_Deep_Agents/: Deep_Agents_Assignment.ipynb  STUDY_GUIDE.md
08_Open_DeepResearch/: STUDY_GUIDE.md  open-deep-research.ipynb
09_Synthetic_Data_Generation_and_LangSmith/: RAG_Chunk_Size_Impact.md  RAG_Embedding_Model_Impact.md  STUDY_GUIDE.md  usecase_data_kg.json  (+1 more)
12_Certification_Challenge/: POC_AskMyBookmark.ipynb  POC_AskMyBookmark_cleaner.ipynb  STUDY_GUIDE.md  aiohttp_scaffolding.md  ask_my_bookmark.py  concurrent_fetch_strategy.md  fetch_all_markdown_files.py  gidgethub_starred_repos.md  github_api_commands.md  pygithub_scaffolding.md  pyproject.toml  semaphore_pattern_asyncio.md  stamina_retry_guide.md  test_readme_existence.py  textacy_preprocess_pipeline.py  vector_store_and_hybrid_search_notes.md
18_Production_RAG_and_Guardrails/: .env.example  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  README.md  STUDY_GUIDE.md  langgraph.json  pyproject.toml
18_Production_RAG_and_Guardrails/app/: __init__.py  caching.py  guardrails.py  models.py  rag.py
18_Production_RAG_and_Guardrails/app/graphs/: __init__.py  agent_with_guardrails.py  simple_agent.py
(+49 files in other folders)
