[project]
name = "12-certification-challenge"
version = "0.1.0"
description = "AIE9 Certification Challenge - Comprehensive AI Engineering Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0",
    "langchain-openai>=0.3.7",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "ragas==0.2.10",
    "rapidfuzz>=3.14.3",
    "nltk>=3.9.2",
    "langgraph>=0.2.69",
    "PyGithub==2.8.1",
    "aiohttp==3.13.3",
    "nest_asyncio==1.6.0",
    "python-dotenv>=1.0.1",
    "gidgethub==5.4.0",
    "stamina==25.2.0",
]
